2006-04-12  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/plugins/GraphViz.py: Add graph preview based on mime (Bug 1449796)

2006-04-12  Alex Roitman  <shura@gramps-project.org>
	* various: Add ChildRef class, reorganize RelLib.
	* src/plugins/Check.py (Check.__init__): Typo.

2006-04-11  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_DbUtils.py (remove_parent_from_family): If
	removing family, also remove it from the child's
	parent_family_list.
	* src/ViewManager.py (ViewManager.change_page): Always toggle the
	sidebar buttons, even if no data is loaded.

	* src/RelLib/_PersonRef.py: Add to repository.
	* src/RelLib/Makefile.am: Ship new file.
	* src/RelLib/_Person.py: Add person_ref_list to store person-to-
	person references.

2006-04-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/images/mk_blue_marble.py: Properly exit on error to let `make`
	stop in that case; Provide fallback if jpegtrans does not work/exist.

2006-04-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_MapView.py: Reworked to display multiple smaller
	tiled map images
	* src/images/mk_blue_marble.py: Script to create the map tiles out of
	the nasa blue marble image
	* src/images/Makefile.am: Add map tile images and bootstrap them using
	mk_blue_marble.py

2006-04-10  Nathan Bullock <nathanbullock@gmail.com>
	* src/GrampsDb/_ReadGedcom.py: LDS fixes.
	* src/Editors/_EditLdsOrd.py: LDS fixes.
	* src/lds.py: LDS fixes.

2006-04-10  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py: Get rid of obsolete self.parent.

2006-04-10  Don Allingham  <don@gramps-project.org>
	* src/DateViews/_PersonView.py: goto active person after a redraw.
	* src/DataViews/_PedigreeViews.py: optimize the screen draws,
	redrawing only when the view is displayed and when the data needs
	to be updated.
	* src/Editors/_EditFamily.py: Fix adding of spouse after family
	has been created

2006-04-09  Alex Roitman  <shura@gramps-project.org>